# prms

./: .gitignore  .project  CMakeLists.txt  FortranEnvironment.cmake  LICENSE.md  Makefile  Makefile.in  PRMS_tables_5.1.0.docx  PRMS_tables_5.2.0.docx  PRMS_tables_5.2.1.docx  README.md  README.txt  basin.f90  basin_summary.f90  call_modules.f90  cascade.f90  climate_hru.f90  climateflow.f90  configure.ac  convert_params.f90  dynamic_param_read.f90  gwflow.f90  ide_dist.f  intcp.f90  makelist  map_results.f90  meson.build  muskingum.f90  muskingum_lake.f90  nhru_summary.f90  nsegment_summary.f90  nsub_summary.f90  potet_pan.f90  prms_summary.f90  release_notes_prms_5.1.0.docx  release_notes_prms_5.2.0.docx  release_notes_prms_5.2.1.docx  routing.f90  soilzone.f90  srunoff.f90  (+7 more)
doc/: PRMS_tables_5.2.1.docx  release_notes_prms_5.2.1.docx
mizu/: Makefile  kwt_route.f90
mmf/: .gitignore  00make_one_file  Makefile  alloc_space.c  batch_run.c  batch_run_functions.c  build_lists.c  call_modules.c  call_setdims.c  check_vars.c  control_addr.c  control_array.c  control_var.c  create_vstats.c  decl_control.c  decldim.c  declparam.c  declvar.c  defs.h  dim_addr.c  dprint.c  free_vstats.c  get_elem_add.c  get_times.c  getdim.c  getdimname.c  getparam.c  getvar.c  globals.h  graph_single_run.c  julconvert.c  julday.c  load_param.c  mmf.c  mms.h  nodes.h  oprint.c  param_addr.c  parse_args.c  print_model_info.c  (+25 more)
notebooks/: Untitled.ipynb  generate_control_file_xml.ipynb  generate_control_fortran_blocks.ipynb  generate_output_variables_fortran_code.ipynb  generate_output_vars_xml.ipynb  generate_parameter_file_xml.ipynb  generate_parameter_fortran_blocks.ipynb  xml_parameters_by_module.ipynb
pipestem/: .tmax.cbh.swo  control.default  control.simple1  control.simple1.bak  daymet.nc  daymet.txt  gmon.out  gwflow.wbal  intcp.wbal  model.out  pipestem.control  prms.bat  restart_save_file  snowcomp.wbal  soilzone.wbal  waterbal.wbal
prms/: .gitignore  5.2.2_notes.docx  Makefile  Makefile_full  Makefile_prmsiv  basin.f  basin.f90  basin_2d.f90  basin_sum.f  basin_sum.f90  basin_summary.f90  biostats.f90  c_prms_time.f90  call_modules.f  call_modules.f90  cascade.f  cascade.f90  cascade.f90_foo  ccsolrad.f  ccsolrad.f90  ccsolrad_2d.f90  ccsolrad_prms.f  check_nhru_params.f90  climate_hru.f  climate_hru.f90  climate_hru_2d.f90  climate_hru_combined.f90  climateflow.f  climateflow.f90  climateflow_2d.f90  foo  (+128 more)
programs/src/: CMakeLists.txt
src/: CMakeLists.txt  Main_prms.f90  Makefile.am  basin.f90  basin_summary.f90  climate_hru.f90  climateflow.f90  constants.f90  control_mod.f90  ddsolrad.f90  dimensions_mod.f90  file_io.f90  m_prms6.f90  mmf_utils.f90  nhru_summary.f90  obs.f90  parameter_mod.f90  potet_jh.f90  prms6.f90  prms_module.f90  prms_time.f90  read_control_file (2).f90  read_control_file.f90  read_data_file.f90  read_parameter_file.f90  soltab.f90  time.f90  transp_tindex.f90  utils_prms.f90  variables_mod.f90
src/classes/: Abc_class.f90  CMakeLists.txt  Control_class.f90  Object_class.f90  String_class.f90  control_mod.f90  dArray_class.f90  iArray_class.f90  m_control.f90  m_kinds.f90  m_str_arr.f90  parameter_mod.f90  rArray_class.f90  rVariable_class.f90  sArray_class.f90  sm_control.f90  variables_mod.f90
src/io/: CMakeLists.txt  file_io.f90  read_control_file.f90  read_data_file.f90
src/misc/: CMakeLists.txt  base_datatypes.f90  basin_summary.f90  constants.f90  conversions.f90  m_prms6.f90  nhru_summary.f90  time.f90  utils_prms.f90
src/physics/: CMakeLists.txt  climate_hru.f90  potet_jh.f90  soltab.f90  transp_tindex.f90
src/prms/: CMakeLists.txt  Main_prms.f90
src/prmslib/: CMakeLists.txt
src/prmslib/classes/: Abc_class.f90  CMakeLists.txt  Control_class.f90  Object_class.f90  Parameter_class.f90  String_class.f90  c_Abc.f90  c_Array.f90  c_Control.f90  c_ModelBase.f90  c_Parameter.f90  c_String.f90  c_dArray.f90  c_dVariable.f90  c_iArray.f90  c_iScalar.f90  c_iVariable.f90  c_rArray.f90  c_rScalar.f90  c_rVariable.f90  c_sArray.f90  c_sVariable.f90  dArray_class.f90  iArray_class.f90  iScalar_class.f90  iVariable_class.f90  rArray_class.f90  rVariable_class.f90  sArray_class.f90  sVariable_class.f90  sm_ModelBase.f90  sm_control.f90  sm_control_case_block.inc  sm_control_typedef.inc  sm_output_variables_code.inc  sm_parameter_case_block.inc  sm_parameter_typedef.inc  sm_parameters.f90
src/prmslib/io/: CMakeLists.txt  file_io.f90  read_control_file.f90  read_data_file.f90  read_parameter_file.f90
src/prmslib/misc/: CMakeLists.txt  Datetime_class.f90  basin.f90  basin_summary.f90  c_Basin_summary.f90  c_Datetime.f90  c_FileIO.f90  c_FileIO_netcdf.f90  c_Simulation.f90  c_basin.f90  c_basin_summary_ptr.f90  c_nhru_summary.f90  c_nhru_summary_ptr.f90  c_obs.f90  c_outvar_list.f90  c_outvar_node.f90  c_prms_time.f90  c_restart.f90  c_simulation.f90  c_summary.f90  c_utils_prms.f90  c_water_balance.f90  constants.f90  conversions.f90  m_constants.f90  m_conversions.f90  m_prms6.f90  m_utils_cbh.f90  m_utils_prms.f90  m_utils_time.f90  nhru_summary.f90  obs.f90  prms_module.f90  prms_simulation.f90  prms_time.f90  sm_FileIO_netcdf.f90  sm_basin.f90  sm_basin_summary.f90  sm_basin_summary_ptr.f90  sm_nhru_summary.f90  (+12 more)
src/prmslib/physics/: CMakeLists.txt  c_cascade.f90  c_climate_hru.f90  c_climateflow.f90  c_ddsolrad.f90  c_flowvars.f90  c_gwflow.f90  c_humidity.f90  c_humidity_hru.f90  c_humidity_per.f90  c_humidity_sta.f90  c_intcp.f90  c_muskingum.f90  c_potet.f90  c_potet_hru.f90  c_potet_jh.f90  c_potet_pm.f90  c_precipitation.f90  c_precipitation_hru.f90  c_routing.f90  c_snowcomp.f90  c_soilzone.f90  c_solar_radiation.f90  c_solar_radiation_cc.f90  c_solar_radiation_degday.f90  c_solar_radiation_hru.f90  c_soltab.f90  c_srunoff.f90  c_stream_temp.f90  c_streamflow.f90  c_streamflow_in_out.f90  c_streamflow_muskingum.f90  c_streamflow_muskingum_mann.f90  c_temperature.f90  c_temperature_hru.f90  c_transp_hru.f90  c_transp_tindex.f90  c_transpiration.f90  c_wind.f90  c_wind_hru.f90  (+48 more)
src/xml/: control.xml  dimensions.xml  parameters.xml  variables.xml
(+400 files in other folders)
